feat: Final production-ready setup for Hostinger deployment

--- a/index.html
+++ b/index.html
@@ -1,18 +1,63 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
+  <!-- Basic Meta Tags -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Infoy Tech Solutions</title>
-  <link rel="icon" href="/icon.jpg" />
-  <!-- Google tag (gtag.js) -->
+  <meta name="description" content="Infoy Tech Solutions - Web, App, and Software Development Company in India offering high-performance digital solutions.">
+  <meta name="keywords" content="Infoy Tech Solutions, web development, software development, app development, IT services, India">
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="Infoy Tech Solutions" />
+  <meta name="theme-color" content="#0f172a" />
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://infoytech.com/" />
+
+  <!-- Open Graph Tags (Facebook, LinkedIn) -->
+  <meta property="og:title" content="Infoy Tech Solutions" />
+  <meta property="og:description" content="Infoy Tech Solutions - Professional IT company specializing in website, app, and custom software solutions." />
+  <meta property="og:image" content="https://infoytech.com/cover.jpg" />
+  <meta property="og:url" content="https://infoytech.com/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Infoy Tech Solutions" />
+
+  <!-- Twitter Card Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Infoy Tech Solutions" />
+  <meta name="twitter:description" content="Professional Web & App Development Services by Infoy Tech Solutions." />
+  <meta name="twitter:image" content="https://infoytech.com/cover.jpg" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="/icon.webp" type="image/webp" />
+
+  <!-- Preload Font Example (optional) -->
+  <!-- <link rel="preload" href="/fonts/your-font.woff2" as="font" type="font/woff2" crossorigin="anonymous" /> -->
+
+  <!-- Structured Data (JSON-LD for SEO) -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Infoy Tech Solutions",
+      "url": "https://infoytech.com",
+      "logo": "https://infoytech.com/icon.webp",
+      "sameAs": [
+        "https://www.facebook.com/yourprofile",
+        "https://www.instagram.com/yourprofile",
+        "https://www.linkedin.com/company/yourcompany"
+      ],
+      "description": "Infoy Tech Solutions is an IT company based in India offering expert services in web development, mobile applications, and software solutions."
+    }
+  </script>
+
+  <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZP3N0Z20PX"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-
     gtag('config', 'G-ZP3N0Z20PX');
   </script>
 </head>
