--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <meta name="twitter:image" content="https://infoytech.com/cover.jpg" />
 
   <!-- Favicon -->
-  <link rel="icon" href="/icon.webp" type="image/webp" />
+  <link rel="icon" href="/icon.jpg" type="image/jpg" />
 
   <!-- Preload Font Example (optional) -->
   <!-- <link rel="preload" href="/fonts/your-font.woff2" as="font" type="font/woff2" crossorigin="anonymous" /> -->
